fixing instagram link and spacing

--- a/main.scss
+++ b/main.scss
@@ -70,7 +70,8 @@ html, body {
 			flex-direction:column;
 
 			@media only screen and (min-width: 768px) {
-				padding: 15%;
+				padding: 19%;
+				padding-bottom: 15%;
 				padding-top: 5%;
 			}
 
@@ -92,7 +93,7 @@ html, body {
 				padding-bottom: 10%;
 
 				@media only screen and (min-width: 960px) {
-					font-size: 3rem;
+					font-size: 2.9rem;
 					padding-bottom: 5%;
 				}
 			}
@@ -105,7 +106,7 @@ html, body {
 				line-height: 130%;
 
 				@media only screen and (min-width: 960px) {
-					font-size: 2.1rem;
+					font-size: 2.0rem;
 				}
 			}
 
@@ -125,7 +126,9 @@ html, body {
 			flex-direction:column;
 
 			@media only screen and (min-width: 768px) {
-				padding: 15%;
+				padding: 19%;
+				padding-top: 10%;
+				padding-bottom: 13%;
 			}
 
 			.logo {
@@ -146,7 +149,7 @@ html, body {
 				padding-bottom: 10%;
 
 				@media only screen and (min-width: 960px) {
-					font-size: 3rem;
+					font-size: 2.8rem;
 					padding-bottom: 5%;
 				}
 			}
@@ -159,7 +162,7 @@ html, body {
 				line-height: 130%;
 
 				@media only screen and (min-width: 960px) {
-					font-size: 2.1rem;
+					font-size: 2.0rem;
 				}
 			}
 
